...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tEY-kC-5tP" secondAttribute="bottom" id="WUj-ZS-wev"/>
                            <constraint firstItem="WcG-2I-mc8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dUw-zM-x66"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tEY-kC-5tP" secondAttribute="trailing" id="yun-Si-SSk"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="TiR-0K-coG">
                        <barButtonItem key="leftBarButtonItem" title="Filter" image="line.horizontal.3.decrease.circle" catalog="system" id="XBd-jK-kLP">
                            <connections>
                                <action selector="filterButtonClicked:" destination="BYZ-38-t0r" id="5hY-Wg-Ozu"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="magnifyingglass" catalog="system" id="DHg-TC-ZUk">
                            <connections>
...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U5h-YJ-P2P">
                                                <rect key="frame" x="147" y="0.0" width="146" height="47"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xr6-ZJ-sDu">
                                                        <rect key="frame" x="53.333333333333343" y="9" width="39" height="29"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                        <state key="normal" title="Apply">
                                                            <color key="titleColor" red="0.00013245826324085407" green="0.68898164988125787" blue="0.39553229410799934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="applyButtonClicked:" destination="OUb-2s-1Sv" eventType="touchUpInside" id="BQt-7B-AcS"/>
                                                        </connections>
                                                    </button>
...
