...
  @IBOutlet weak var filtersLabel: UILabel!
  var animations = Animations()
  var passDataToMainViewDelegate: PassDataToMainViewDelegate?
  var selectedRow = 0
  var selectedCategory: String = String()
  var filterDataYN: Bool = Bool()
  var pickerData: [String] = ["All", "Apple Watch Apps", "Book", "Business", "Developer Tools", "Education", "Entertainment", "Finance", "Food & Drink", "Games", "Graphic & Design", "Health & Fitness", "Kids", "Lifestyle", "Magazine & Newspaper", "Medical", "Music", "Navigation", "News", "Photo & Video", "Productivity", "Reference", "Shopping", "Social Networking", "Sports", "Travel", "Utilities",
  
  override func viewDidLoad() {
    super.viewDidLoad()
    //adds rouned corners, but will be tied to specific edges in next line of code
    buttonBackgroundLayer.layer.cornerRadius = 15
    //rounds only specific corners of the view
...
